Service questions: checkboxes answer_required

--- a/frameworks/g-cloud-12/questions/services/APIAutomationTools.yml
+++ b/frameworks/g-cloud-12/questions/services/APIAutomationTools.yml
@@ -26,3 +26,7 @@ options:
     value: puppet
   - label: Other
     value: other
+
+validations:
+  - name: answer_required
+    message: Select an automation tool.
