--- a/frameworks/g-cloud-12/questions/services/metricsHostingWhat.yml
+++ b/frameworks/g-cloud-12/questions/services/metricsHostingWhat.yml
@@ -32,3 +32,7 @@ options:
   - label: Other
     value: other
     filter_ignore: true
+
+validations:
+  - name: answer_required
+    message: Select a type of metric.
