--- a/frameworks/g-cloud-12/questions/services/publicSectorNetworksTypes.yml
+++ b/frameworks/g-cloud-12/questions/services/publicSectorNetworksTypes.yml
@@ -27,3 +27,7 @@ options:
   - label: Other
     value: other
     filter_ignore: true 
+
+validations:
+  - name: answer_required
+    message: Select a network.
