--- a/frameworks/g-cloud-12/questions/services/backupRecovery.yml
+++ b/frameworks/g-cloud-12/questions/services/backupRecovery.yml
@@ -16,4 +16,4 @@ options:
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select a recovery method.
