--- a/frameworks/g-cloud-12/questions/services/dataProtectionBetweenNetworks.yml
+++ b/frameworks/g-cloud-12/questions/services/dataProtectionBetweenNetworks.yml
@@ -37,4 +37,4 @@ options:
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select a data protection method.
