--- a/frameworks/g-cloud-12/questions/services/dataSanitisationTypeHosting.yml
+++ b/frameworks/g-cloud-12/questions/services/dataSanitisationTypeHosting.yml
@@ -19,4 +19,4 @@ options:
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select a data sanitisation process.
