--- a/frameworks/g-cloud-12/questions/services/dataStorageAndProcessingLocations.yml
+++ b/frameworks/g-cloud-12/questions/services/dataStorageAndProcessingLocations.yml
@@ -32,4 +32,4 @@ options:
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select a location.
