--- a/frameworks/g-cloud-12/questions/services/devicesUsersManageTheServiceThrough.yml
+++ b/frameworks/g-cloud-12/questions/services/devicesUsersManageTheServiceThrough.yml
@@ -29,4 +29,4 @@ options:
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select a device type.
