--- a/frameworks/g-cloud-12/questions/services/installationCompatibleOperatingSystems.yml
+++ b/frameworks/g-cloud-12/questions/services/installationCompatibleOperatingSystems.yml
@@ -26,4 +26,4 @@ options:
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select an operating system.
