--- a/frameworks/g-cloud-12/questions/services/managementAccessAuthentication.yml
+++ b/frameworks/g-cloud-12/questions/services/managementAccessAuthentication.yml
@@ -35,4 +35,4 @@ options:
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select an authentication method.
