--- a/frameworks/g-cloud-12/questions/services/ongoingSupportServices.yml
+++ b/frameworks/g-cloud-12/questions/services/ongoingSupportServices.yml
@@ -18,4 +18,4 @@ options:
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select a service type.
