--- a/frameworks/g-cloud-12/questions/services/securityTestingAccreditations.yml
+++ b/frameworks/g-cloud-12/questions/services/securityTestingAccreditations.yml
@@ -27,4 +27,4 @@ options:
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select a certification.
