--- a/frameworks/g-cloud-12/questions/services/userAuthenticationHosting.yml
+++ b/frameworks/g-cloud-12/questions/services/userAuthenticationHosting.yml
@@ -40,4 +40,4 @@ options:
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select an authentication method.
