--- a/frameworks/g-cloud-12/questions/services/userAuthenticationSoftware.yml
+++ b/frameworks/g-cloud-12/questions/services/userAuthenticationSoftware.yml
@@ -41,4 +41,4 @@ options:
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select an authentication method.
