Service questions: list answer_required

--- a/frameworks/g-cloud-12/questions/services/APIAutomationToolsOther.yml
+++ b/frameworks/g-cloud-12/questions/services/APIAutomationToolsOther.yml
@@ -12,6 +12,8 @@ list_item_name: API automation tool
 type: list
 
 validations:
+  - name: answer_required
+    message: Enter an automation tool.
   - name: under_10_words
     message: You can’t write more than 10 words for each API automation tool.
   - name: max_items_limit
