--- a/frameworks/g-cloud-12/questions/services/accreditationsOtherList.yml
+++ b/frameworks/g-cloud-12/questions/services/accreditationsOtherList.yml
@@ -13,7 +13,7 @@ type: list
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Enter a security certification.
   - name: under_10_words
     message: You can’t write more than 10 words for each security certification.
   - name: max_items_limit
