--- a/frameworks/g-cloud-12/questions/services/backupWhatData.yml
+++ b/frameworks/g-cloud-12/questions/services/backupWhatData.yml
@@ -13,6 +13,8 @@ list_item_name: backup item
 type: list
 
 validations:
+  - name: answer_required
+    message: Enter a backup item.
   - name: max_items_limit
     message: You must have 10 or fewer backup items.
   - name: under_character_limit
