--- a/frameworks/g-cloud-12/questions/services/metricsHostingWhatOther.yml
+++ b/frameworks/g-cloud-12/questions/services/metricsHostingWhatOther.yml
@@ -12,6 +12,8 @@ type: list
 list_item_name: infrastructure or application metric
 
 validations:
+  - name: answer_required
+    message: Enter a metric.
   - name: under_10_words
     message: You can’t write more than 10 words for each infrastructure or application metric.
   - name: max_items_limit
