--- a/frameworks/g-cloud-12/questions/services/serviceBenefitsHostingAndSoftware.yml
+++ b/frameworks/g-cloud-12/questions/services/serviceBenefitsHostingAndSoftware.yml
@@ -17,7 +17,7 @@ list_item_name: service benefit
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Enter a service benefit.
   - name: max_items_limit
     message: You can have no more than 10 benefits.
   - name: under_10_words
