--- a/frameworks/g-cloud-12/questions/services/serviceFeaturesHostingAndSoftware.yml
+++ b/frameworks/g-cloud-12/questions/services/serviceFeaturesHostingAndSoftware.yml
@@ -15,7 +15,7 @@ list_item_name: service feature
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Enter a service feature.
   - name: max_items_limit
     message: You can have no more than 10 features.
   - name: under_10_words
