--- a/frameworks/g-cloud-12/questions/services/systemRequirements.yml
+++ b/frameworks/g-cloud-12/questions/services/systemRequirements.yml
@@ -16,7 +16,7 @@ type: list
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Enter a system requirement.
   - name: max_items_limit
     message: You can have no more than 10 system requirements.
   - name: under_10_words
