--- a/frameworks/g-cloud-12/questions/services/serviceName.yml
+++ b/frameworks/g-cloud-12/questions/services/serviceName.yml
@@ -14,6 +14,6 @@ type: text
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Enter the service name.
   - name: under_character_limit
     message: Your service name must be no more than 100 characters.
