--- a/frameworks/g-cloud-12/questions/services/standardsISO28000Who.yml
+++ b/frameworks/g-cloud-12/questions/services/standardsISO28000Who.yml
@@ -13,7 +13,7 @@ max_length_in_words: 10
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Enter the accreditor name.
   - name: under_10_words
     message: Your description must be no more than 10 words.
   - name: under_character_limit
