--- a/frameworks/g-cloud-12/questions/services/serviceConstraintsSupport.yml
+++ b/frameworks/g-cloud-12/questions/services/serviceConstraintsSupport.yml
@@ -15,6 +15,6 @@ validations:
   - name: answer_required
     message: Enter the service constraints.
   - name: under_100_words
-    message: Your description must be no more than 100 words.
+    message: Description must be 100 words or fewer.
   - name: under_character_limit
-    message: Your description must be no more than 1000 characters.
+    message: Description must be 1000 characters or fewer.
