--- a/frameworks/g-cloud-12/questions/services/standardsISOIEC27001When.yml
+++ b/frameworks/g-cloud-12/questions/services/standardsISOIEC27001When.yml
@@ -15,4 +15,4 @@ validations:
   - name: answer_required
     message: Enter the accreditation date.
   - name: under_character_limit
-    message: Your accreditation date must be no more than 100 characters.
+    message: Your accreditation date must be 50 characters or fewer.
