--- a/frameworks/g-cloud-12/questions/services/freeVersionDescription.yml
+++ b/frameworks/g-cloud-12/questions/services/freeVersionDescription.yml
@@ -22,6 +22,6 @@ validations:
   - name: answer_required
     message: Enter description.
   - name: under_50_words
-    message: Your description must be no more than 50 words.
+    message: Description must be 50 words or fewer.
   - name: under_character_limit
-    message: Your description must be no more than 500 characters.
+    message: Description must be 500 characters or fewer.
