--- a/frameworks/g-cloud-12/questions/services/standardsISOIEC27001Exclusions.yml
+++ b/frameworks/g-cloud-12/questions/services/standardsISOIEC27001Exclusions.yml
@@ -15,6 +15,6 @@ validations:
   - name: answer_required
     message: Enter the parts of your service not covered by ISO/IEC 27001 certification.
   - name: under_200_words
-    message: Your description must be no more than 200 words.
+    message: Description must be 200 words or fewer.
   - name: under_character_limit
-    message: Your description must be no more than 2000 characters.
+    message: Description must be 2000 characters or fewer.
