--- a/frameworks/g-cloud-12/questions/services/virtualisationThirdPartyProvider.yml
+++ b/frameworks/g-cloud-12/questions/services/virtualisationThirdPartyProvider.yml
@@ -13,7 +13,6 @@ validations:
   - name: answer_required
     message: Enter the provider name.
   - name: under_10_words
-    message: Your description must be no more than 10 words.
+    message: Provider name must be 10 words or fewer.
   - name: under_character_limit
-    message: Your description must be no more than 100 characters.
-
+    message: Provider name must be 100 characters or fewer.
