--- a/frameworks/g-cloud-12/questions/services/accreditationsOtherList.yml
+++ b/frameworks/g-cloud-12/questions/services/accreditationsOtherList.yml
@@ -15,8 +15,8 @@ validations:
   - name: answer_required
     message: Enter a security certification.
   - name: under_10_words
-    message: You can’t write more than 10 words for each security certification.
+    message: Each security certification must be 10 words or fewer.
   - name: max_items_limit
     message: You must have 10 or fewer security certifications.
   - name: under_character_limit
-    message: You can’t write more than 100 characters for each security certification.
+    message: Each security certification must be 100 characters or fewer.
