--- a/frameworks/g-cloud-12/questions/services/backupWhatData.yml
+++ b/frameworks/g-cloud-12/questions/services/backupWhatData.yml
@@ -1,6 +1,7 @@
 name: What’s backed up
 question: What can the service back up?
 question_advice: Examples include files, virtual machines, or databases.
+hint: 10 words for each backup item, 10 backup items maximum.
 
 optional: true
 hidden: true
@@ -17,5 +18,7 @@ validations:
     message: Enter a backup item.
   - name: max_items_limit
     message: You must have 10 or fewer backup items.
+  - name: under_10_words
+    message: Each backup item must be 10 words or fewer.
   - name: under_character_limit
-    message: You can’t write more than 100 characters for each backup item.
+    message: Each backup item must be 100 characters or fewer.
