--- a/frameworks/g-cloud-12/questions/services/metricsHostingWhatOther.yml
+++ b/frameworks/g-cloud-12/questions/services/metricsHostingWhatOther.yml
@@ -15,8 +15,8 @@ validations:
   - name: answer_required
     message: Enter a metric.
   - name: under_10_words
-    message: You can’t write more than 10 words for each infrastructure or application metric.
+    message: Each infrastructure or application metric must be 10 words or fewer.
   - name: max_items_limit
     message: You must have 10 or fewer infrastructure or application metrics.
   - name: under_character_limit
-    message: You can’t write more than 100 characters for each infrastructure or application metric.
+    message: Each infrastructure or application metric must be 100 characters or fewer.
