--- a/frameworks/g-cloud-12/questions/services/serviceBenefitsHostingAndSoftware.yml
+++ b/frameworks/g-cloud-12/questions/services/serviceBenefitsHostingAndSoftware.yml
@@ -21,6 +21,6 @@ validations:
   - name: max_items_limit
     message: You can have no more than 10 benefits.
   - name: under_10_words
-    message: You can’t write more than 10 words for each benefit.
+    message: Each benefit must be 10 words or fewer.
   - name: under_character_limit
-    message: You can’t write more than 100 characters for each benefit.
+    message: Each benefit must be 100 characters or fewer.
