--- a/frameworks/g-cloud-12/questions/services/serviceFeaturesHostingAndSoftware.yml
+++ b/frameworks/g-cloud-12/questions/services/serviceFeaturesHostingAndSoftware.yml
@@ -19,6 +19,6 @@ validations:
   - name: max_items_limit
     message: You can have no more than 10 features.
   - name: under_10_words
-    message: You can’t write more than 10 words for each feature.
+    message: Each feature must be 10 words or fewer.
   - name: under_character_limit
-    message: You can’t write more than 100 characters for each feature.
+    message: Each feature must be 100 characters or fewer.
