--- a/frameworks/g-cloud-12/questions/services/systemRequirements.yml
+++ b/frameworks/g-cloud-12/questions/services/systemRequirements.yml
@@ -20,6 +20,6 @@ validations:
   - name: max_items_limit
     message: You can have no more than 10 system requirements.
   - name: under_10_words
-    message: You can’t write more than 10 words for each system requirement.
+    message: Each system requirement must be 10 words or fewer.
   - name: under_character_limit
-    message: You can’t write more than 100 characters for each system requirement.
+    message: Each system requirement must be 100 characters or fewer.
