--- a/frameworks/g-cloud-12/questions/declaration/servicesHaveOrSupportCloudHostingCloudSoftware.yml
+++ b/frameworks/g-cloud-12/questions/declaration/servicesHaveOrSupportCloudHostingCloudSoftware.yml
@@ -14,7 +14,7 @@ validations:
   # Used in custom validator for those not submitting on (lot1 and lot2) and (lot3)
   # See app/main/helpers/validation.py::G12Validator
   - name: dependent_question_error
-    message: You need to answer "Yes" to either this question or question 2
+    message: You need to answer Yes to either this question or to question 2
 assessment:
   required: True
   passIfIn:
