--- a/frameworks/g-cloud-12/questions/declaration/servicesHaveOrSupportCloudSupport.yml
+++ b/frameworks/g-cloud-12/questions/declaration/servicesHaveOrSupportCloudSupport.yml
@@ -13,7 +13,7 @@ validations:
   # Used in custom validator for those not submitting on (lot1 and lot2) and (lot3)
   # See app/main/helpers/validation.py::G12Validator
   - name: dependent_question_error
-    message: You need to answer "Yes" to either this question or question 1
+    message: You need to answer Yes to either this question or to question 1
 assessment:
   required: True
   passIfIn:
