--- a/frameworks/g-cloud-12/questions/declaration/modernSlaveryStatementOptional.yml
+++ b/frameworks/g-cloud-12/questions/declaration/modernSlaveryStatementOptional.yml
@@ -1,10 +1,21 @@
 name: Modern slavery statement optional
 question: >
-  You don’t need to publish a slavery and human trafficking statement to meet the modern slavery requirements for G-Cloud 12.
-question_advice: >
-  You can choose to upload a statement. Read the Home Office guidance for information about <a href="https://www.gov.uk/government/publications/transparency-in-supply-chains-a-practical-guide" target="_blank" rel="noopener noreferrer">how to write a statement and what information it must include (link opens in a new tab)</a>.
-hint: >
-  Use an Open Document Format (ODF) or PDF/A (eg .pdf, .odt). (Maximum file size 5MB.)
+  <p class="govuk-body">You don’t need to publish a slavery and human trafficking statement to meet the modern slavery requirements for G-Cloud 12.</p>
+
+  <p class="govuk-body">You can choose to upload a statement.</p>
+
+  <p class="govuk-body">Your statement should:</p>
+  <ul class="govuk-list">
+    <li>be an Open Document Format (ODF) or PDF/A</li>
+    <li>have a maximum file size of 5MB</li>
+    <li>meet accessibility standards</li>
+  </ul>
+  <p class="govuk-body">
+    <a class="govuk-link" target="_blank" rel="noopener noreferrer" href="https://www.gov.uk/guidance/how-to-publish-on-gov-uk/accessible-pdfs">Read the guidance on accessible documents (link opens in a new tab)</a>.
+  </p>
+  <p class="govuk-body">
+    <a href="https://www.gov.uk/government/publications/transparency-in-supply-chains-a-practical-guide" target="_blank" rel="noopener noreferrer">Read the Home Office guidance about how to write a statement and what information to include (link opens in a new tab)</a>.
+  </p>
 
 hidden: true
 type: upload
