--- a/frameworks/g-cloud-12/messages/homepage-sidebar.yml
+++ b/frameworks/g-cloud-12/messages/homepage-sidebar.yml
@@ -1,5 +1,5 @@
 coming:
-  heading: 'G-Cloud&nbsp;12 will open on 3 March 2020'
+  heading: 'G-Cloud&nbsp;12 will open on 3 March 2020 at 3pm GMT.'
   messages:
     - 'Provide cloud hosting, software and support.'
     - 'You’ll need to create a supplier account to apply.'
