--- a/frameworks/g-cloud-12/questions/declaration/10WorkingDays.yml
+++ b/frameworks/g-cloud-12/questions/declaration/10WorkingDays.yml
@@ -1,6 +1,6 @@
 name: Signing and returning the framework agreement
 question: >
-  Do you agree to sign and return the final framework agreement, without changing it, within 10 working days of it being issued by the Crown Commercial Service?
+  Do you agree to confirm and sign your framework agreement with an electronic signature within 10 days of it being issued by the Crown Commercial Service?
 
 type: boolean
 assessment:
