--- a/frameworks/g-cloud-12/manifests/display_service.yml
+++ b/frameworks/g-cloud-12/manifests/display_service.yml
@@ -88,6 +88,8 @@
     - webInterfaceAccessibility
     - webInterfaceAccessibilityDescription
     - webInterfaceAccessibilityTesting
+    - serviceInterface
+    - serviceInterfaceDescription
     - serviceInterfaceAccessibility
     - serviceInterfaceAccessibilityDescription
     - serviceInterfaceTesting
